[tool.poetry]
name = "EspApi"
version = "0.1.0"
description = ""
authors = ["Roman <me@roman.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
replit = "^3.0.0"
uvicorn = "^0.13.4"
starlette ="^0.13.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"